# graphiti-qdrant

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  MCP-SETUP.md  README.md  fastmcp-fastembed.json  fastmcp.json  main.py  mcp_server.py  pyproject.toml  run_http_server.py  test_cloud_deployment.py  test_http_local.py
.claude/: mcp.json
analysis-docs/: CLAUDE_JSON_CLEANUP_STRATEGY.md  MCP_GLOBAL_MIGRATION_PLAN_V1.md  MCP_GLOBAL_MIGRATION_PLAN_V2.md  MCP_MIGRATION_BLOG_POST.md  MIGRATION_SUMMARY.md  cleanup_claude_json.py
architecture/: README.md
architecture/diagrams/: 02_architecture_diagrams.md
architecture/docs/: 01_component_inventory.md  03_data_flows.md  04_api_reference.md
data/interim/pages/: manifest.json
data/interim/pages/Anthropic/: 0009_Model_deprecations.json  0010_Choosing_the_right_model.json  0011_Migrating_to_Claude_45.json  (+226 more)
docs/: DEPLOYMENT_GUIDE.md  HOW_CLAUDE_CODE_MCP_WORKS.md  MCP_CONFIGURATION_GUIDE.md  MCP_SETUP.md  QUICK_START.md  QUICK_START_CLIENT.md  SECURITY_AUDIT_REPORT.md  VALIDATION_REPORT.md  VECTOR_DB_REFRESH_GUIDE.md  WHERE_ARE_MCP_CONFIGS.md
docs/fastmcp-promotion/: FASTMCP_CLOUD_PROMOTION_STRATEGY_V1.md  FASTMCP_PROMOTION_SUMMARY.md  README.md  WEEK1_TESTING_SUMMARY.md
scripts/: README.md  add_qdrant_to_project.py  add_to_claude_code.sh  add_to_claude_code_project.sh  analyze_llms_structure.py  download_llms_raw.py  fix_all_qdrant_configs.sh  langchain-qdrant-notes.md  split_llms_pages.py  test_mcp_server.py  upload_to_qdrant.py  validate_qdrant.py
tests/: __init__.py  test_mcp_server.py
(+1744 files in other folders)
